add_subdirectory(vsgcompute)
add_subdirectory(vsgdraw)
add_subdirectory(vsgsubpass)
add_subdirectory(vsgviewer)
add_subdirectory(vsgintersection)
add_subdirectory(vsginterleaved)
add_subdirectory(vsgmultigpu)
add_subdirectory(vsgraytracing)
add_subdirectory(vsgrendertotexture)
add_subdirectory(vsgexecutecommands)
add_subdirectory(vsgortho)
add_subdirectory(vsgscreenshot)
add_subdirectory(vsgheadless)
add_subdirectory(vsgdynamictexture)
