add_subdirectory(vsgcompute)
add_subdirectory(vsgdraw)
add_subdirectory(vsgdynamictexture)
add_subdirectory(vsgexecutecommands)
add_subdirectory(vsgheadless)
add_subdirectory(vsginput)
add_subdirectory(vsginterleaved)
add_subdirectory(vsgintersection)
add_subdirectory(vsgmultigpu)
add_subdirectory(vsgmultiviews)
add_subdirectory(vsgortho)
add_subdirectory(vsgoverlay)
add_subdirectory(vsgraytracing)
add_subdirectory(vsgrendertotexture)
add_subdirectory(vsgscreenshot)
add_subdirectory(vsgsubpass)
add_subdirectory(vsgtext)
add_subdirectory(vsgtexturearray)
add_subdirectory(vsgviewer)

if (vsgImGui_FOUND)
    add_subdirectory(vsgimgui)
endif()
