add_subdirectory(vsgallocator)
add_subdirectory(vsgarrays)
add_subdirectory(vsgc_interface)
add_subdirectory(vsgintrospection)
add_subdirectory(vsgmaths)
add_subdirectory(vsgmemory)
add_subdirectory(vsgnamespaces)
add_subdirectory(vsgpointer)
add_subdirectory(vsgtypes)
add_subdirectory(vsgvalues)
add_subdirectory(vsgvisitor)
