add_subdirectory(vsgallocator)
add_subdirectory(vsgarrays)
add_subdirectory(vsgc_interface)
add_subdirectory(vsgcompute)
add_subdirectory(vsgdraw)
add_subdirectory(vsggroups)
add_subdirectory(vsgintrospection)
add_subdirectory(vsgio)
add_subdirectory(vsgmaths)
add_subdirectory(vsgmemory)
add_subdirectory(vsgpointer)
add_subdirectory(vsgpushconstants)
add_subdirectory(vsgtypes)
add_subdirectory(vsgvalues)
add_subdirectory(vsgvisitor)
