SET(APPLICATION_NAME vsggroups)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    ${OSG_INCLUDE_DIR}
    ${VSG_INCLUDE_DIR}
)


SET(SOURCES
    vsggroups.cpp
)


ADD_EXECUTABLE(${APPLICATION_NAME} ${HEADERS} ${SOURCES})

if (TARGET_VSG)
    add_dependencies(${APPLICATION_NAME} ${TARGET_VSG})
endif()

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} ${VSG_LIBRARIES} ${OSG_LIBRARIES})
