SET(APPLICATION_NAME vsgtypes)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    ${OSG_INCLUDE_DIR}
    ${VSG_INCLUDE_DIR}
    ${Vulkan_INCLUDE_DIR}
)

SET(SOURCES
    vsgtypes.cpp
)


ADD_EXECUTABLE(${APPLICATION_NAME} ${HEADERS} ${SOURCES})

LINK_DIRECTORIES(${OSG_LIB_DIR})

if (TARGET_VSG)
    add_dependencies(${APPLICATION_NAME} ${TARGET_VSG})
endif()

if (${VSG_DEFINITIONS})
    add_definitions(-D${VSG_DEFINITIONS})
endif()

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} ${VSG_LIBRARIES} ${Vulkan_LIBRARY} ${OSG_LIBRARIES})
