add_subdirectory(vsgheadless)
add_subdirectory(vsgmultigpu)
add_subdirectory(vsgmultiviews)
add_subdirectory(vsgortho)
add_subdirectory(vsgoverlay)
add_subdirectory(vsgrendertotexture)
add_subdirectory(vsgscreenshot)
add_subdirectory(vsgsubpass)
add_subdirectory(vsgskybox)
add_subdirectory(vsgviewer)
add_subdirectory(vsgdeviceselection)
add_subdirectory(vsganaglyphicstereo)
add_subdirectory(vsgwindows)

if (vsgXchange_FOUND)
    add_subdirectory(vsghelloworld)
endif()
